# CL-GO-DASH

./: .gitattributes  .gitignore  CHANGELOG.md  CL-GO-DASH_DIFFERENTIAL_REVIEW_2026-07-23.md  CLAUDE.md  CROSS-PLATFORM.md  FORECAST_CHARTS_V2_CORRECTIONS_REVIEW_2026-07-23.md  FORECAST_CHARTS_V2_DIFFERENTIAL_REVIEW_2026-07-23.md  LICENSE  README.md  README_FR.md  SECURITY.md  app-release-notes.json  components.json  eslint.config.js  forecast-threat-model.md  index.html  install.ps1  install.sh  mascot.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  cef-artifacts.json  cef-build-tools.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  forecast-docs.json  forecast-workbench.json  mascot.json
src-tauri/default-skills/cli-create/: SKILL.md
src-tauri/default-skills/cli-create/references/: dynamic-injection.md  executor-template.md  script-templates.md
src-tauri/default-skills/hk-telegram/: SKILL.md
src-tauri/default-skills/skill-create/: SKILL.md
src-tauri/default-skills/video-analyzer/: SKILL.md
src-tauri/default-skills/voxtral-cli/: SKILL.md
src-tauri/icons/: icon.icns
src-tauri/resources/: litellm-models.json
src-tauri/resources/forecast-sidecar/: model-artifacts.json  requirements.txt  server.py  test_contracts.py  test_model_smoke.py  test_secure_adapters.py  test_tabpfn_adapter.py  test_timesfm_adapter.py  test_timesfm_output.py  test_toto_adapter.py
src-tauri/resources/forecast-sidecar/forecast_runtime/: __init__.py  adapter_utils.py  adapters.py  chronos_adapter.py  config_utils.py  device_utils.py  external_adapter.py  flowstate_adapter.py  kairos_adapter.py  limits.py  moirai_adapter.py  quantile_utils.py  sundial_adapter.py  tabpfn_adapter.py  timesfm_adapter.py  timesfm_output.py  tirex_adapter.py  toto_adapter.py  toto_covariates.py  toto_multivariate.py  validation.py
src-tauri/resources/forecast-sidecar/runtime-locks/: chronos.in  flowstate.in  kairos.in  moirai.in  sundial.in  tabpfn.in  timesfm.in  tirex.in  toto.in
src-tauri/resources/ollama-bundle/: libggml-base.0.0.0.dylib  libggml-base.0.dylib  ollama
src-tauri/resources/ollama-bundle/mlx_metal_v3/: libmlx.dylib  libmlxc.dylib  mlx.metallib
src-tauri/resources/ollama-bundle/mlx_metal_v4/: libmlx.dylib  libmlxc.dylib  mlx.metallib
src-tauri/resources/searxng-sidecar/: settings.template.yml
src-tauri/scripts/: download-ollama.sh  ensure-cef-dev-runtime.sh  prepare-cef-windows-test-runtime.ps1  prepare-cef-windows.ps1  prepare-cef.sh  prepare-searxng.sh  run-cef-dev-app.sh
src-tauri/src/: app_events.rs  app_setup.rs  invoke_handler.rs  invoke_handler_tail.rs  lib.rs  main.rs  ollama_polling.rs  storage_migration.rs  storage_migration_files.rs  storage_migration_files_tests.rs  tray.rs  windows_entry.rs
src-tauri/src/commands/: agent_chat.rs  agent_chat_cancel.rs  agent_chat_queue.rs  agent_chat_stream_replacement_tests.rs  agent_chat_streams.rs  agent_chat_task.rs  agent_clone.rs  agent_import.rs  agent_md.rs  agent_ollama.rs  agent_sessions.rs  agent_settings.rs  agent_tools.rs  agent_working_dir.rs  api_keys.rs  app_update.rs  app_update_assets.rs  app_update_install.rs  app_update_install_paths.rs  app_update_install_scripts.rs  app_update_install_temp.rs  app_update_notes.rs  app_update_notes_tests.rs  app_update_tests.rs  attachments.rs  browser.rs  codex.rs  compress.rs  config.rs  config_mascot_tests.rs  context_usage.rs  diagnostics.rs  favorite_models.rs  file_preview.rs  file_preview_office.rs  file_preview_tests.rs  file_tree.rs  file_tree_tests.rs  file_tree_watcher.rs  forecast.rs  (+49 more)
src-tauri/src/commands/agent_chat_task/: acp.rs  acp_events.rs  acp_permission.rs  api.rs  api_images.rs  common.rs  compress.rs  gemma4_thinking_guard.rs  ollama.rs  params.rs
src-tauri/src/commands/file_preview_editors/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/models/: config.rs  file_tree.rs  file_tree_tests.rs  gateway_config.rs  mascot.rs  mod.rs
src-tauri/src/services/: api_key_cache.rs  api_keys.rs  api_keys_http.rs  api_keys_mcp.rs  api_keys_mcp_tests.rs  api_keys_raw.rs  api_keys_registry.rs  api_keys_state.rs  api_keys_test_raw.rs  api_keys_transaction_tests.rs  api_keys_transactions.rs  api_keys_validate.rs  api_keys_validate_tests.rs  attachment_access.rs  attachment_access_tests.rs  config.rs  config_resilience_tests.rs  cron.rs  dev_mode.rs  env_detect.rs  favorite_models.rs  file_watcher.rs  file_watcher_tests.rs  git_context.rs  git_context_tests.rs  gpu_detect.rs  gpu_vram.rs  log_reader.rs  mod.rs  model_downloads.rs  model_downloads_store.rs  model_downloads_store_tests.rs  model_downloads_types.rs  ollama_env.rs  ollama_kill.rs  ollama_kill_tests.rs  ollama_lifecycle.rs  ollama_port.rs  ollama_ps.rs  paths.rs  (+22 more)
src-tauri/src/services/acp/: connection.rs  grok_skills.rs  mod.rs  policy.rs  process.rs  protocol.rs  session_store.rs  skill_bridge.rs  tests.rs
src-tauri/src/services/agent_import/: discovery.rs  discovery_items.rs  discovery_security_tests.rs  discovery_tests.rs  document_io.rs  documents.rs  documents_persistence_tests.rs  documents_tests.rs  integration_tests.rs  limits.rs  mod.rs  models.rs  registry.rs  registry_tests.rs  rule_content.rs  rule_content_tests.rs  rule_walker.rs  source_paths.rs  source_specs.rs  source_specs_tests.rs  walker.rs
src-tauri/src/services/agent_local/: agent_local_modules_core.rs  agent_local_modules_prompts.rs  agent_local_modules_subagent_hardening.rs  agent_local_modules_tools.rs  agent_loop.rs  agent_loop_completion.rs  agent_loop_compression.rs  agent_loop_errors.rs  agent_loop_finish.rs  agent_loop_limits.rs  agent_loop_ollama_request.rs  agent_loop_plan.rs  agent_loop_support.rs  agent_loop_thinking_retry.rs  agent_md.rs  agent_md_import_tests.rs  agent_md_tests.rs  agent_send_preflight.rs  agent_send_preflight_tests.rs  agent_settings.rs  agent_settings_tests.rs  app_handle_global.rs  backend_stream_generation_tests.rs  (+435 more)
src-tauri/tests/windows-private-store/: Cargo.toml
(+2102 files in other folders)
