[package]
name = "cl-go-dash"
version = "0.9.3"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "cl_go_dash_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cl-go-dash"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Framework
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream", "rustls", "query", "form"] }

# Gateway messaging
url = "2"
subtle = "2"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
hmac = "0.12"

# Streaming NDJSON
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Locale detection cross-plateforme
sys-locale = "0.3"
tempfile = "3"

# HTML -> Markdown
htmd = "0.5"

# Readability
dom_smoothie = { version = "0.10", features = ["aho-corasick"] }

# PDF
pdf-extract = "0.10"

# DOCX
zip = "8"
quick-xml = "0.37"

# XLSX / Spreadsheets
calamine = "0.34"
csv = "1"
rust_xlsxwriter = "0.82"
umya-spreadsheet = "2"

# Image metadata
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Base64
base64 = "0.22"

# Keyring (1 seule entrée master key)
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Vault chiffré (XChaCha20-Poly1305)
chacha20poly1305 = "0.10"
rand = "0.8.6"

# Zeroize mémoire pour les secrets (clés API)
zeroize = { version = "1.8", features = ["derive"] }

# Chargement .env au démarrage (credentials OAuth runtime)
dotenvy = "0.15"

sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
open = "5"

# Trait async (pour abstraction providers LLM)
async-trait = "0.1"

# Streaming SSE (pour client LLM unifié)
eventsource-stream = "0.2"

# Shell cross-platform
which = "7"

# Terminal PTY cross-platform
portable-pty = "0.9"

# Token counting (goliapkg — supporte LLaMA, Qwen, DeepSeek, Mistral)
tiktoken = "3.1"

# Archive extraction (Ollama bundle)
zstd = "0.13"
tar = "0.4"
flate2 = "1"

# Existants
regex = "1"
notify = "7"
notify-debouncer-mini = "0.5"

# Git operations (branch, status, worktree)
git2 = "0.20"

# Tools grep/glob (crates de ripgrep)
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
globset = "0.4"

# Process tree (tree-kill sidecar Ollama)
sysinfo = { version = "0.35", default-features = false, features = ["system"] }

# Traductions pré-bundlées (embarquées dans le binaire)
include_dir = "0.7"
httpdate = "1.0.3"
resvg = "0.47.0"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "7", features = ["macos_fsevent"] }
core-foundation = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
