[package]
name = "cl-go-windows-private-store-tests"
version = "0.0.0"
edition = "2021"
publish = false

[target.'cfg(windows)'.dependencies]
hex = "0.4"
rand = "0.8.6"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }
